--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -26,15 +26,13 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>actuarius-parent</artifactId>
+        <groupId>de.d3adspace</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.d3adspace</groupId>
-    <artifactId>actuarius-parent</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>server</module>
-        <module>protocol</module>
-    </modules>
-
+    <artifactId>actuarius-protocol</artifactId>
+    
 </project>
