Add codec module to maven structure.

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>server</module>
         <module>protocol</module>
+        <module>codec</module>
     </modules>
 
 </project>
