--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.d3adspace</groupId>
+    <groupId>de.d3adspace.actuarius</groupId>
     <artifactId>actuarius-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
