--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -28,7 +28,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>actuarius-parent</artifactId>
-        <groupId>de.d3adspace</groupId>
+        <groupId>de.d3adspace.actuarius</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
