Add extended build script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,22 @@
+################
+### Language ###
+################
 language: java
-script: mvn clean test
+
+###########
+### JDK ###
+###########
+jdk:
+  - oraclejdk8
+
+#####################
+### Notifications ###
+#####################
+notifications:
+  email: false
+
+####################
+### Build script ###
+####################
+script:
+  - mvn clean compile package
