--- a/server/pom.xml
+++ b/server/pom.xml
@@ -42,8 +42,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
 
@@ -104,8 +104,10 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.16.Final</version>
         </dependency>
+
+        <!-- Actuarius protocol -->
         <dependency>
-            <groupId>de.d3adspace</groupId>
+            <groupId>de.d3adspace.actuarius</groupId>
             <artifactId>actuarius-protocol</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
