Update docker image.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -36,6 +36,8 @@
     <artifactId>actuarius-server</artifactId>
 
     <build>
+        <finalName>actuarius-server</finalName>
+
         <plugins>
             <!-- Compile sources -->
             <plugin>
